--- a/uu.html
+++ b/uu.html
@@ -33,9 +33,9 @@
 				}else if(i==3){
 					div.style.display="none"
 				}else if(i==4){
-					div.style.width="100px"
-					div.style.height="100px"
-					div.style.background="black"
+					div.style.width=""
+					div.style.height=""
+					div.style.background=""
 					div.style.display=""
 				}
 			}
